feat: added user dtos for endpoints
