# models/message.go
@@ -12,7 +12,7 @@ const (
 )
 
 type Message struct {
-	UserId   int64
-	Type     MessageType
-	Contents string
+	UserId   int64       `json:"user_id"`
+	Type     MessageType `json:"message_type"`
+	Contents string      `json:"contents"`
 }
